<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".productos.ProductosActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:title="@string/productos"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        style="@style/Widget.VentaExpress.AppBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="8dp"
        android:clipToPadding="false"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_productos"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        android:padding="32dp"
        android:layout_below="@id/toolbar"
        android:visibility="gone" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinKit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/primary"
        app:SpinKit_Style="FadingCircle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/agregar_producto"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white"
        app:backgroundTint="@color/primary" />

</RelativeLayout>